[Chromium] DRT on Windows crashes when a testcase has a progress element in indeterminate state https://bugs.webkit.org/show_bug.cgi?id=102459

Reviewed by Dimitri Glazkov.

Tools:

Since WebThemeControlDRTWin::markState does not consider indeterminate state, DRT caused a crash.

* DumpRenderTree/chromium/WebThemeControlDRTWin.cpp:
(WebThemeControlDRTWin::markState):

LayoutTests:

* fast/dom/HTMLProgressElement/progress-element-indeterminate-crash-expected.txt: Added.
* fast/dom/HTMLProgressElement/progress-element-indeterminate-crash.html: Added.


Canonical link: https://commits.webkit.org/122383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136806 268f45cc-cd09-0410-ab3c-d52691b4dbfc